An escape hatch to correctly render emojis inside clipped text (#702)
I.e., inside blocks of text with the `-webkit-background-clip: text` CSS rule applied.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,6 +436,12 @@ pre[class*="language-"] {
 		-webkit-background-clip: text;
 		color: transparent;
 	}
+	
+	.emoji {
+		background: none;
+		-webkit-background-clip: initial;
+		color: initial;
+	}
 }
 
 .read-more::before {
